--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ name = "pypi"
 it8951 = {editable = true, git = "https://github.com/GregDMeyer/IT8951.git"}
 epdlib = "*"
 argconfigparse = "*"
+jsonmerge = "*"
 
 [requires]
 python_version = "3"
@@ -35,4 +36,3 @@ querylms = "*"
 cairosvg = "*"
 ipykernel = "*"
 pipreqs = "*"
-
