enable JSON configuration

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ it8951 = {editable = true, git = "https://github.com/GregDMeyer/IT8951.git"}
 epdlib = "*"
 argconfigparse = "*"
 jsonmerge = "*"
+jsonpath-ng = "*"
 
 [requires]
 python_version = "3"
